--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ dist-ssr
 
 # Environment variables
 .env
+.env.local
+.env.production
 
 # Editor directories and files
 .vscode/*
@@ -25,5 +27,15 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Documentation and guides (work in progress)
+*_GUIDE.md
+*_IMPLEMENTATION*.md
+*NOTEBOOKLM*.md
+*SESSION_STORAGE*.md
+system_architecture.md.resolved
 # text files
-.txt
+*.txt
+*.BACKEND_IMPLEMENTATION_GUIDE.md
+*.SUPABASE_SESSION_STORAGE.md
+*.system_architecture.md.resolved
