--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.86.0",
+    "chart.js": "^4.5.1",
+    "dotenv": "^17.2.3",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
+    "serialport": "^13.0.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
@@ -27,7 +31,6 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "lucide-react": "^0.554.0",
-    "recharts": "^3.4.1",
     "tailwindcss": "^4.1.17",
     "vite": "npm:rolldown-vite@7.2.5"
   },
